[gd_scene load_steps=19 format=2]

[ext_resource path="res://EmployeePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/Gold.png" type="Texture" id=4]
[ext_resource path="res://images/Built2.png" type="Texture" id=5]
[ext_resource path="res://images/Hand2.png" type="Texture" id=6]
[ext_resource path="res://images/Crown.png" type="Texture" id=7]
[ext_resource path="res://images/Player1.png" type="Texture" id=8]
[ext_resource path="res://images/Player7.png" type="Texture" id=9]
[ext_resource path="res://images/Player6.png" type="Texture" id=10]
[ext_resource path="res://images/Player4.png" type="Texture" id=11]
[ext_resource path="res://images/Player5.png" type="Texture" id=12]
[ext_resource path="res://images/Player8.png" type="Texture" id=13]
[ext_resource path="res://images/Player3.png" type="Texture" id=14]
[ext_resource path="res://images/Player2.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Player5",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Player6",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Player1",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Player3",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Player7",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Player0",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Player4",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Player2",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 3 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="BuiltScript" type="Sprite" parent="."]
position = Vector2( 925, 741 )
texture = ExtResource( 5 )

[node name="HandScript" type="Sprite" parent="."]
position = Vector2( 330, 741 )
texture = ExtResource( 6 )

[node name="MoneyNum" type="Label" parent="."]
margin_left = 1301.0
margin_top = 698.0
margin_right = 1408.0
margin_bottom = 777.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyIcon" type="Sprite" parent="."]
position = Vector2( 1260, 741 )
scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 4 )

[node name="Employee" parent="." instance=ExtResource( 1 )]
position = Vector2( 1260, 816 )
scale = Vector2( 0.13, 0.13 )

[node name="Icon" type="AnimatedSprite" parent="."]
position = Vector2( 1260, 670 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "Player7"

[node name="Username" type="Label" parent="."]
margin_left = 1299.0
margin_top = 638.0
margin_right = 1479.0
margin_bottom = 699.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Unknown8..."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crown" type="Sprite" parent="."]
position = Vector2( 1328, 814 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[connection signal="input_event" from="Employee" to="Employee" method="on_input_event"]
